--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.11.17",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
