--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.13.0",
     "@react-spring/web": "^9.7.5",
     "autoprefixer": "^10.4.20",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.11.17",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
